fixtures/invalid/heredoc.scl
container
	foo = <<EOF
bar
    indent
baz
EOF
	bar = <<DOC
	hello
